<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/bgRegister"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:src="@color/colorPrimaryDark"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">
        <ImageView
            android:id="@+id/logoMonkey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:src="@drawable/be_paleo_monkey"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="40dp"/>

        <LinearLayout
            android:id="@+id/lnrLytRegisterForm"
            android:layout_below="@id/logoMonkey"
            android:layout_gravity="center_vertical"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="40dp">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_marginTop="10dp"
                    android:id="@+id/editTxtRegisterName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    style="@style/txtViewLogin"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTxtRegisterEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    style="@style/txtViewLogin"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTxtRegisterPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    style="@style/txtViewLogin"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTxtRegisterPassword2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/retypePassword"
                    android:inputType="textPassword"
                    style="@style/txtViewLogin"/>
            </android.support.design.widget.TextInputLayout>
            <Button
                android:background="@color/colorOpositeLight"
                android:id="@+id/btnRegisterNewUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"/>
            <TextView
                android:id="@+id/txtViewErrRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="lalallalalal"
                android:textColor="@color/fui_bgEmail"
                />
        </LinearLayout>
        <ImageView
            android:layout_below="@id/lnrLytRegisterForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/backgroundevolution"
            android:tint="@color/colorAccent"
            />
    </RelativeLayout>

</FrameLayout>
