<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/bgCartNotLogged"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        app:srcCompat="@color/cardview_dark_background"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/logoMonkey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:src="@drawable/be_paleo_monkey"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="40dp"/>
        <LinearLayout
            android:id="@+id/lnrLytLoginForm"
            android:layout_marginTop="10dp"
            android:layout_below="@id/logoMonkey"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="40dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editTxtUsernameLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#FFF"
                    android:hint="@string/email"
                    android:textColorHint="#FFF"
                    android:backgroundTint="@color/colorAccent"
                    android:text=""
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_marginTop="10dp"
                    android:id="@+id/editTxtPasswordLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:textColorHint="#FFF"
                    android:inputType="textPassword"
                    android:textColor="#FFF"
                    android:backgroundTint="@color/colorAccent"
                    android:text=""/>
            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/btnEnterNotLogged"
                android:layout_marginHorizontal="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorOpositeLight"
                android:text="@string/enter"
                android:textColor="#FFFFFF"
                android:textSize="17sp"
                />
            <!--
            <Button
                android:layout_marginHorizontal="1dp"
                android:id="@+id/btnSignInGoogle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fui_sign_in_with_google"
                />-->

            <TextView
                android:id="@+id/txtViewLoginErrors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_red_dark"
                android:text="ERROR"
                android:gravity="right"
                android:visibility="gone"
                />
        </LinearLayout>
        <ImageView
            android:layout_below="@id/lnrLytLoginForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/backgroundevolution"
            android:tint="@color/colorAccent"
            />
        <LinearLayout

            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1.0">
            <Button
                android:id="@+id/btnRegisterEmail"
                android:layout_width="0dip"
                android:layout_weight=".5"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:background="@color/colorSecondary"
                android:layout_marginRight="5dp"
                android:textColor="#FFF"
                />


            <Button
                android:id="@+id/btnForgotPassword"
                android:layout_width="0dip"
                android:layout_weight=".5"
                android:layout_height="wrap_content"
                android:text="Forgot password"
                android:background="@color/colorSecondary"
                android:textColor="#FFF"
                />
        </LinearLayout>

    </RelativeLayout>
</FrameLayout>